apps/blog/dev/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-backend
  namespace: dwp-dev
  labels:
    app: auth-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-backend
  template:
    metadata:
      labels:
        app: auth-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: auth-backend
          image: auth-service:v0.0.5-SNAPSHOT
          imagePullPolicy: Never   # ← important!
          #image: 850756192530.dkr.ecr.us-east-1.amazonaws.com/dwp/auth:v1.0.11
          ports:
           - containerPort: 8081
