apps/blog/dev/authpg-deployment.yaml
# pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-auth
  namespace: dwp-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-auth
  template:
    metadata:
      labels:
        app: postgres-auth
    spec:
      containers:
        - name: postgres-auth
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: authpg-storage
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "authuser", "-d", "authdb"]
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: authpg-storage
          persistentVolumeClaim:
            claimName: authpg-pvc
