apps/blog/dev/blog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-backend
  namespace: dwp-dev
  labels:
    app: blog-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-backend
  template:
    metadata:
      labels:
        app: blog-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: blog-backend
          image: blog-service:v1.2.0-SNAPSHOT
          imagePullPolicy: Never   # ← important!
          #image: 850756192530.dkr.ecr.us-east-1.amazonaws.com/dwp/blog:v1.0.11
          ports:
           - containerPort: 8080
