apps/blog/dev/authpg-service.yaml
# pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-auth
  namespace: dwp-dev
spec:
  selector:
    app: postgres-auth
  ports:
    - port: 5432
      targetPort: 5432
