apps/blog/dev/blogpg-service.yaml
# pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-blog
  namespace: dwp-dev
spec:
  selector:
    app: postgres-blog
  ports:
    - port: 5432
      targetPort: 5432
